# aiobatch

./: README.md  pyproject.toml
src/aiobatch/: __init__.py  async_batch.py  batch.py  batcher.py  scheduler.py  task.py
